saas/web/app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saas-web-app
spec:
  selector:
    app: saas-web-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
